# fastapi-project

./: main.py  pyproject.toml
